# ptouch-esp32

./: .gitignore  CMakeLists.txt  README.md  default_8MB.csv  platformio.ini  sdkconfig.defaults  setup.sh
components/ptouch-esp32/: CMakeLists.txt  library.properties
components/ptouch-esp32/include/: ptouch_debug.h  ptouch_esp32.h
components/ptouch-esp32/src/: ptouch_debug.c  ptouch_image.cpp  ptouch_printer.cpp  ptouch_printing.cpp  ptouch_utils.cpp
data/: index.html  script.js  style.css
docs/: DEBUG_GUIDE.md  PTOUCH_INTEGRATION_FEASIBILITY.md
examples/basic_printing/: basic_printing.ino
include/: config.example.h
lib/ptouch-esp32/: CMakeLists.txt
lib/ptouch-esp32/include/: ptouch_esp32.h
lib/ptouch-esp32/src/: ptouch_image.cpp  ptouch_printer.cpp  ptouch_printing.cpp  ptouch_utils.cpp
src/: main.cpp
test/: CMakeLists.txt  README.md  TESTING_GUIDE.md
test/fixtures/: mock_responses.h  test_data.h  test_helpers.h
test/hardware/: CMakeLists.txt  QUICK_START.md  README.md  hardware_test_runner.h  platformio.ini  test_usb_host_hardware.cpp
test/hardware/main/: test_core_systems.cpp
test/hardware/src/: hardware_test_runner.cpp
test/integration/: test_concurrent_operations.cpp  test_connection_lifecycle.cpp  test_error_handling.cpp  test_print_workflow.cpp
test/mocks/: hardware_abstraction.h  mock_usb_host.h
test/protocol/: test_command_generation.cpp  test_printer_models.cpp  test_response_parsing.cpp
test/runner/: main.cpp  test_runner.h
test/unit/: test_image_processing.cpp  test_printer_state.cpp  test_protocol_parsing.cpp  test_usb_communication.cpp  test_web_endpoints.cpp
