idf_component_register(
    SRCS
        "src/ptouch_printer.cpp"
        "src/ptouch_printing.cpp"
        "src/ptouch_image.cpp"
        "src/ptouch_utils.cpp"
        "src/ptouch_debug.c"
    INCLUDE_DIRS
        "include"
        "../../include"  # Add project include directory for config.h
    REQUIRES
        "usb"
        "esp_http_server"
        "esp_wifi"
        "nvs_flash"
        "spiffs"
        "freertos"
        "log"
        "console"
        "esp_timer"
        "heap"
) 